--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # _config.yml
 
 # ===== 사이트 URL 설정 (테스트 환경) =====
-# 최종 배포 시에는 실제 도메인 주소로 변경해야 합니다.
+# 최종 배포 시에는 실제 도메인 주소로 변경
 url: "https://hamnyk.github.io"
 baseurl: "/test"
 
